feat(Collections): CRUD Working CRUD for collections
