# src/handlers/delete-collection.ts
@@ -1,35 +1,28 @@
-import { DynamoDBClient } from '@aws-sdk/client-dynamodb';
-import { DeleteCommand, DynamoDBDocumentClient } from '@aws-sdk/lib-dynamodb';
 import { APIGatewayEvent } from 'aws-lambda';
 import {
   methodNotAllowedResponse,
   serverErrorResponse,
   successResponse,
 } from '../responses';
-
-const client = new DynamoDBClient({});
-const ddbDocClient = DynamoDBDocumentClient.from(client);
-const tableName = process.env.SAMPLE_TABLE;
+import CollectionService from '../services/CollectionService';
 
 export const deleteCollection = async (event: APIGatewayEvent) => {
   if (event.httpMethod !== 'DELETE') {
     return methodNotAllowedResponse();
   }
-  const id = event.pathParameters?.collectionId;
+  const collectionId = event.pathParameters?.collectionId as string;
 
-  console.info('deleteCollection(): Received request for collection:', id);
-
-  const params = {
-    TableName: tableName,
-    Key: { id },
-  };
+  console.info(
+    'deleteCollection(): Received request for collection:',
+    collectionId,
+  );
 
   try {
-    await ddbDocClient.send(new DeleteCommand(params));
-    return successResponse({ id });
+    await CollectionService.deleteCollection(collectionId);
+    return successResponse({ id: collectionId });
   } catch (err) {
     console.log(
-      `deleteCollection(): Deleting collection ${id} failed for`,
+      `deleteCollection(): Deleting collection ${collectionId} failed for`,
       err,
     );
     return serverErrorResponse({ message: (err as Error).message });
